undo lib structure

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-include:
-  - project: earthscope/infrastructure/gitlab-ci
-    ref: "0"
-    file: project-template-library-python.yml
+#include:
+#  - project: earthscope/infrastructure/gitlab-ci
+#    ref: "0"
+#    file: project-template-library-python.yml
