--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "es-strain-tools"
-version ="0.0.0"
+name = "earthscopestraintools"
+version ="0.0.5"
 authors = [
   { name="Mike Gottlieb", email="mike.gottlieb@eartscope.org" },
 ]
@@ -16,11 +16,19 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
 ]
-
-[project.urls]
-"Homepage" = "https://gitlab.com/earthscope/gds/strain/es-strain-tools"
-
+dependencies = [
+    "numpy==1.24.1",
+    "pandas==1.5.3",
+    "requests==2.28.2",
+    "xmltodict==0.13.0"
+]
 
 [project.optional-dependencies]
-mseed = ["obspy"]
-tdb = ["tiledb", "es_datasources_client"]
+mseed = [ "obspy==1.4.0" ]
+tiledb = ["tiledb==0.20.0", "pyarrow==7.0.0"]
+
+[project.urls]
+"Homepage" = "https://gitlab.com/earthscope/gds/strain/es-strain-tools-lib"
+
+
+
