--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "earthscopestraintools"
-version ="0.0.8"
+version ="0.1.1"
 authors = [
   { name="Mike Gottlieb", email="mike.gottlieb@eartscope.org" },
 ]
@@ -17,15 +17,16 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "numpy==1.24.1",
-    "pandas==1.5.3",
-    "requests==2.28.2",
-    "xmltodict==0.13.0"
+    "numpy>=1.24.1",
+    "pandas>=1.5.3",
+    "requests>=2.28.2",
+    "xmltodict>=0.13.0",
+    "geopy>=2.3.0"
 ]
 
 [project.optional-dependencies]
-mseed = [ "obspy==1.4.0" ]
-tiledb = ["tiledb==0.20.0", "pyarrow==7.0.0"]
+mseed = [ "obspy>=1.4.0" ]
+tiledb = ["tiledb>=0.20.0", "pyarrow>=7.0.0"]
 
 [project.urls]
 "Homepage" = "https://gitlab.com/earthscope/gds/strain/earthscopestraintools"
