--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "earthscopestraintools"
-version ="0.1.1"
+version ="0.1.2"
 authors = [
   { name="Mike Gottlieb", email="mike.gottlieb@eartscope.org" },
 ]
@@ -20,7 +20,7 @@ dependencies = [
     "numpy>=1.24.1",
     "pandas>=1.5.3",
     "requests>=2.28.2",
-    "xmltodict>=0.13.0",
+    #"xmltodict>=0.13.0",
     "geopy>=2.3.0"
 ]
 
