--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,9 +6,9 @@ build:
   tools:
     python: "3.8"
 
-python:
-  install:
-    - requirements: requirements.txt
+#python:
+#  install:
+#    - requirements: requirements.txt
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
