--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
 [project.optional-dependencies]
 mseed = [ "obspy>=1.4.0" ]
 tiledb = ["tiledb==0.21.4", "pyarrow==13.0.0"]
+documentation = ["sphinx==7.2.6","myst-parser==2.0.0",
+                "sphinx-rtd-theme==1.3.0","sphinxcontrib-apidoc==0.4.0"]
 
 [project.urls]
 "Homepage" = "https://gitlab.com/earthscope/gds/strain/earthscopestraintools"
