--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,7 +13,11 @@ build:
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
    configuration: docs/source/conf.py
-
+# Pip install requirements for docs dependencies
 python:
   install:
     - requirements: docs/requirements.txt
+
+# By default readthedocs does not checkout git submodules
+submodules:
+    include: all
