--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,4 +2,8 @@ sphinx==7.2.6
 myst-parser==2.0.0
 sphinx-rtd-theme==1.3.0
 sphinxcontrib-apidoc==0.4.0
+nbsphinx==0.9.3
+sphinx-pyproject-0.3.0
+jupyter==1.0.0
 earthscopestraintools[mseed,tiledb]
+#sudo apt install pandoc
