--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,7 +3,7 @@ myst-parser==2.0.0
 sphinx-rtd-theme==1.3.0
 sphinxcontrib-apidoc==0.4.0
 nbsphinx==0.9.3
-sphinx-pyproject-0.3.0
+sphinx-pyproject==0.3.0
 jupyter==1.0.0
 earthscopestraintools[mseed,tiledb]
 #sudo apt install pandoc
