Attempt to build docs with docker enabled

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,5 +5,5 @@ sphinxcontrib-apidoc==0.4.0
 nbsphinx==0.9.3
 sphinx-pyproject==0.3.0
 jupyter==1.0.0
+docker
 earthscopestraintools[mseed,tiledb]
-#sudo apt install pandoc
