--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,6 +4,5 @@ sphinx-rtd-theme==1.3.0
 sphinxcontrib-apidoc==0.4.0
 nbsphinx==0.9.3
 sphinx-pyproject==0.3.0
-jupyter==1.0.0
-docker
+jupyter==1.0.0 # don't need?
 earthscopestraintools[mseed,tiledb]
