--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,23 @@ venv
 .DS_Store
 __pycache__/
 commands.txt
+1h20hztest2d.tdb/__commits/__1678214935083_1678214935083_ec28bf05bc4d4d1a88acf9fa76c476ff_17.wrt
+1h20hztest2d.tdb/__fragments/__1678214935083_1678214935083_ec28bf05bc4d4d1a88acf9fa76c476ff_17/__fragment_metadata.tdb
+1h20hztest2d.tdb/__fragments/__1678214935083_1678214935083_ec28bf05bc4d4d1a88acf9fa76c476ff_17/a0.tdb
+1h20hztest2d.tdb/__fragments/__1678214935083_1678214935083_ec28bf05bc4d4d1a88acf9fa76c476ff_17/d0_var.tdb
+1h20hztest2d.tdb/__fragments/__1678214935083_1678214935083_ec28bf05bc4d4d1a88acf9fa76c476ff_17/d0.tdb
+1h20hztest2d.tdb/__fragments/__1678214935083_1678214935083_ec28bf05bc4d4d1a88acf9fa76c476ff_17/d1.tdb
+1h20hztest2d.tdb/__meta/__1678214935298_1678214935298_3568af5d1fde4b0dbae85f544ed8f734
+1h20hztest2d.tdb/__schema/__1678214933278_1678214933278_1707cf529c924b33b49a7a98534bbc9a
+.gitignore
+2d-vs-3d-test.ipynb
+co-seismic_offsets.ipynb
+.gitignore
+dev_notebook.ipynb
+.gitignore
+level2.ipynb
+.gitignore
+gaps.ipynb
+.gitignore
+plot_dynamics.ipynb
+test.csv
