--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "earthscopestraintools"
-version ="0.1.39"
+version ="0.1.40"
 authors = [
   { name="Mike Gottlieb", email="mike.gottlieb@eartscope.org" },
 ]
@@ -19,10 +19,11 @@ classifiers = [
 dependencies = [
     "scipy>=1.10.1",
     "numpy>=1.24.1",
-    "pandas>=2.1.0",
+    "pandas[performance]>=2.1.0",
     "requests>=2.28.2",
     #"xmltodict>=0.13.0",
-    "geopy>=2.3.0"
+    "geopy>=2.3.0",
+    "numexpr>=2.8.4"
 ]
 
 [project.optional-dependencies]
