--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
-numpy==1.24.1
-pandas==1.5.3
-requests==2.28.2
-tiledb==0.20.0
-obspy==1.4.0
-es_datasources_client==0.3.1
-pyarrow==7.0.0
+scipy>=1.10.1
+numpy>=1.24.1
+pandas[performance]>=2.1.0
+requests>=2.28.2
+geopy>=2.3.0
+numexpr>=2.8.4
+obspy>=1.4.0
+tiledb==0.23.0
+pyarrow==13.0.0
+ipympl>=0.9.3
+
+# numpy==1.24.1
+# pandas==1.5.3
+# requests==2.28.2
+# tiledb==0.20.0
+# obspy==1.4.0
+# es_datasources_client==0.3.1
+# pyarrow==7.0.0
+# numexpr>=2.8.4
+# ipympl>=0.9.3
